  - node's public IP (alec/kuba)
  - lms-squid: changed/fixed lms.ini section name to [redirector] (alec)
  - removed old contrib/squid_warnings (alec)
  - added option custom_accesstable for user-defined access rights (alec)
  - fixed devices desc on map when device has no IP, now device lastonline 
    status is getting from all connected nodes lastonline value (alec)
    
version 1.5.6 Baal (24/04/2005):

  - finished translation of documentation (kondi)
  - we can use limitations in percents in warnings (chilek)
  - tickets searching for selected user in userinfobox (chilek)
  - percentage discount for customer liabilities/assignments (alec)
  - added dirty support for quotas in accounts (lukasz)
  - new daemon (alec):
    * changed name to 'lmsd'
    * online configuration and management
    * cron's style work
    * configuration in database (only, ini files not supported)
    * rewrited database drivers
    * database connection options from command line or environment
    * selected hosts/routers reloading
    * WARNING: Old daemon not supported in Reload menu!
  - suspension percentage for assignments can be specified in lms.ini (chilek)
  - history of userbalace work_in_progress (hunter)
  - in invoice edition added check that settlement date not conflicts with
    invoice number, so we can change date only to the same year or month
    (monthly_numbering) that was before change (alec)
  - fixed invoices list sorting (alec)
  - few fixes in database engine (especially in mysql driver), so connect
    errors should be now displayed by app, not by php itself (lukasz)
  - on covenants report fixed columns summary and parse errors in eval()
    functions with polish locale (alec)
  - BTS#0000323: lms-rtparser: fixed multipart messages charset conversion
    and added decoding of quoted-printable encoded messages (alec)
  - added customer ID on Invoices Report (alec)
  - we don't use capitalize in admininfo.