@@ -24,49 +24,43 @@
  *  $Id$
  */
 
-$layout['pagetitle'] = trans('Accounts Clear With Customer ID: $0',sprintf("%04d",$_GET['id']));
-$SMARTY->assign('userid',$_GET['id']);
+$userid = $_GET['id'];
 
-if (!$LMS->UserExists($_GET['id']))
+if(!$LMS->UserExists($userid))
 {
+	$layout['pagetitle'] = trans('Accounts Clear With Customer ID: $0',sprintf("%04d", $userid));
 	$body = '<H1>'.$layout['pagetitle'].'</H1><P>'.trans('Incorrect Customer ID.').'</P>';
+	
+	$SMARTY->assign('body',$body);
+	$SMARTY->assign('userid',$userid);
+	$SMARTY->display('header.html');
+	$SMARTY->display('dialog.html');
+	$SMARTY->display('footer.html');
 }
-else
+
+if($covenantlist = $DB->GetAll('SELECT invoiceid, itemid, taxvalue,
+			SUM(CASE type WHEN 3 THEN value ELSE value*-1 END)*-1 AS value
+			FROM cash 
+			WHERE userid = ? 
+			GROUP BY invoiceid, itemid, taxvalue
+			HAVING SUM(CASE type WHEN 3 THEN value ELSE value*-1 END)*-1 > 0
+			ORDER BY invoiceid', array($userid)))
 {
-	$user_id = $_GET['id'];
-		
-	$stan = array(
-			'22.0' => $LMS->GetUserBalance($user_id, '22.0'),
-			'7.0' => $LMS->GetUserBalance($user_id, '7.0'),
-			'0.0' => $LMS->GetUserBalance($user_id, '0.0'),
-			trans('tax-free') => $LMS->GetUserBalance($user_id, trans('tax-free'))
-	);
-	asort($stan);
-		
-	foreach($stan as $key => $val)
+	foreach($covenantlist as $row)
 	{
-		if(($balance = $LMS->GetUserBalance($user_id)) >= 0)
-			break;
-	
-		if($balance > $val)
-			$val = -($balance);
-		else		
-			$val = -$val;
-	
-		if ($key == trans('tax-free'))
-			$ret[$key] = $LMS->DB->Execute('INSERT INTO cash (time, adminid, type, value, taxvalue, userid, comment) VALUES (?NOW?, ?, ?, ?, NULL, ?, ?)', array($LMS->AUTH->id, 3 , round($val,2) , $user_id, trans('Accounted')));
-		else
-			$ret[$key] = $LMS->DB->Execute('INSERT INTO cash (time, adminid, type, value, taxvalue, userid, comment) VALUES (?NOW?, ?, ?, ?, ?, ?, ?)', array($LMS->AUTH->id, 3 , round($val,2) , $key, $user_id, trans('Accounted')));
+		$DB->Execute('INSERT INTO cash (time, adminid, type, value, taxvalue, userid, comment, invoiceid, itemid)
+				VALUES (?NOW?, ?, 3, ?, ?, ?, ?, ?, ?)', 
+				array($AUTH->id, 
+					$row['value'],
+					$row['taxvalue'],
+					$userid, 
+					trans('Accounted'), 
+					$row['invoiceid'], 
+					$row['itemid']));
 	}
 	$LMS->SetTS('cash');
-	
-	header('Location: ?'.$SESSION->get('backto'));
 }
 
-$SMARTY->display('header.html');
-$SMARTY->assign('body',$body);
-$SMARTY->display('dialog.html');
-$SMARTY->display('footer.html');
+header('Location: ?'.$SESSION->get('backto'));
 
 ?>
-
